# ai-chatbot

./: README.md
chatbot-server/: .dockerignore  .env  .gitignore  Dockerfile  main.py  pyproject.toml
chatbot-server/chatbot/: api.py  app.py  client.py  config.py
chatbot-server/chatbot/api/: chat.py  files.py  user.py
chatbot-server/chatbot/db/: crud.py  database.py  models.py  user.py
chatbot-server/chatbot/indexing/: indexer.py
chatbot-server/chatbot/llm/: client.py
chatbot-server/chatbot/models/: chat_completion.py
chatbot-ui/: .env.production  Dockerfile  package.json  pnpm-lock.yaml
chatbot-ui/app/(chat)/: layout.tsx
chatbot-ui/app/(chat)/api/chat/: route.ts
chatbot-ui/app/(chat)/api/document/: route.ts
chatbot-ui/app/(chat)/api/files/upload/: route.ts
chatbot-ui/app/(chat)/api/history/: route.ts
chatbot-ui/app/(chat)/api/suggestions/: route.ts
chatbot-ui/app/(chat)/api/vote/: route.ts
chatbot-ui/app/(chat)/chat/[id]/: page.tsx
chatbot-ui/components/: chat.tsx  message-actions.tsx  message.tsx  multimodal-input.tsx  sidebar-history.tsx  sidebar-user-nav.tsx
chatbot-ui/lib/: api.ts
deployment/: docker-compose.yaml
deployment/helm/ai-chatbot/: Chart.yaml  values.yaml
deployment/helm/ai-chatbot/templates/: _helpers.tpl  deployment.yaml  service.yaml
docs/: openapi.json
