[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["miaolmes <1971665853@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
openai = "^1.57.1"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.19"
langchain-core = "^0.3.22"
langchain-chroma = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
