[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["miaolmes <1971665853@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
openai = "^1.57.1"
pydantic-settings = "^2.6.1"
python-multipart = "^0.0.19"
langchain-core = "^0.3.22"
langchain-chroma = "^0.1.4"
httpx = { extras = ["socks"], version = "^0.28.0" }
sqlmodel = "^0.0.22"
watchdog = "^6.0.0"
chromadb = "^0.5.23"
langchain-community = "^0.3.11"
langchain-openai = "^0.2.12"
pymupdf = "^1.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
